# oop-4

./: CMakeLists.txt  Customer.cpp  Customer.h  Goods.cpp  Goods.h  Person.cpp  Person.h  Product.cpp  Product.h  ProductShop.cpp  ProductShop.h  Shop.cpp  Shop.h  main.cpp  operator.cpp  operator.h
